--- a/login page.html
+++ b/login page.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/login.css">
     <title>Login Form</title>
-    
+    <script src="login.js" defer></script> <!-- Link to external JS file -->
 </head>
 <body>
- <!--log in html-->
     <div class="form-container">
         <h2>LogIn</h2>
-        <form action="#" method="POST">
+        <form id="loginForm">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
 
@@ -21,6 +20,5 @@
             <input type="submit" value="Login">
         </form>
     </div>
-
 </body>
 </html>
