--- a/frontpage.html
+++ b/frontpage.html
@@ -11,7 +11,7 @@
 <div class="mainfram">
     <p class="intro">welcome to....</p>
     <div id="title">
-        <h1>E-Sheba</h1>
+        <h1>Paper Work.com</h1>
     </div>
     
 
